Pages en Sidebar menu

--- a/lib/kajooly_template_beta_web/templates/layout/partials/body/left-menu.html.heex
+++ b/lib/kajooly_template_beta_web/templates/layout/partials/body/left-menu.html.heex
@@ -94,6 +94,18 @@
                         <span> Generic </span>
                     </a>
                 </li>
+                <li>
+                    <a href="/treeview">
+                        <i class="ri-profile-line"></i>
+                        <span> TreeView Layout </span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/treeview/basic">
+                        <i class="ri-profile-line"></i>
+                        <span> TreeView Layout Basic</span>
+                    </a>
+                </li>
                
             </ul>
              <ul id="side-menu">
